@@ -1,5 +1,9 @@
           CHANGES IN SOUNDGEN VERSION 1.5.1.9000 [...date...]
 
+MINOR:
+  * pitch_app(): choose summary function
+
+
           CHANGES IN SOUNDGEN VERSION 1.5.1 [12-October-2019]
 BUGS FIXED:
   * pitch_app() runs locally, new layout, multiple new features, integrated with analyze()
